[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "bookbook"
author = "Thomas Kluyver"
author-email = "thomas@kluyver.me.uk"
home-page = "https://github.com/takluyver/bookbook"
requires = ["nbconvert", "pandocfilters", "jinja2"]
requires-python = ">=3.5"
description-file = "README.rst"
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Topic :: Documentation"]

